# file_compare

./: .gitignore  LICENSE  README.md  file_compare.py  setup.cfg  tests.py
.github/workflows/: deploy_hold.yaml  testing.yaml
data/to/compare/: sample.txt
