[metadata]
name = file_compare
version = file: VERSION
description = Topological sorting with provision of weights to nodes of the directed graph
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
license = BSD 3-Clause License
license-file = LICENSE
home-page = https://github.com/saripirala/file_compare
project_urls =
    Bug Tracker = https://github.com/saripirala/file_compare/issues
    Documentation = https://file_compare.readthedocs.io
    Source Code = https://github.com/saripirala/file_compare
author = Sairam Aripirala
author_email = sairam.aripirala@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities
    Topic :: Software Development
    Typing :: Typed
requires-dist = setuptools
keywords =
    weighted Topological Sorting

[options]
include_package_data = True
zip_safe = true
py_modules =
    file_compare
[options.extras_require]
testing =
    coverage
    flake8
    flake8-comprehensions
    flake8-deprecated
    flake8-import-order
    flake8-print
    flake8-quotes
    flake8-rst-docstrings
    flake8-tuple

[coverage:run]
branch = True
command_line = -m unittest discover tests --verbose
data_file = build/.coverage

[coverage:report]
show_missing = True
include =
    file_compare.py

[coverage:html]
directory = build/coverage

[coverage:xml]
output = build/coverage.xml

[flake8]
application-import-names = weighted_topsort, tests
exclude = build,docs,env
ignore = RST306,RST399,W503
import-order-style = pycharm
rst-directives = seealso
rst-roles = attr,class,const,data,exc,func,meth,mod,obj,ref,yields